--- a/app/composer.json
+++ b/app/composer.json
@@ -1,5 +1,7 @@
 {
     "require": {
-        "squizlabs/php_codesniffer": "^3.3"
+        "squizlabs/php_codesniffer": "^3.3",
+        "phpcompatibility/php-compatibility": "^9.1",
+        "dealerdirect/phpcodesniffer-composer-installer": "^0.5.0"
     }
 }
