--- a/app/composer.json
+++ b/app/composer.json
@@ -1,4 +1,5 @@
 {
+    "type": "application",
     "require": {
         "squizlabs/php_codesniffer": "^3.3",
         "phpcompatibility/php-compatibility": "^9.1",
