--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,3 +10,10 @@ test amd64:
   extends: .test
   script:
     - docker run --rm "${CI_REGISTRY_IMAGE}/${BUILD_ARCH}:${CI_COMMIT_SHA}"  phpcs --version
+
+test amd64 defaultcmd:
+  variables:
+    BUILD_ARCH: amd64
+  extends: .test
+  script:
+    - docker run --rm "${CI_REGISTRY_IMAGE}/${BUILD_ARCH}:${CI_COMMIT_SHA}"  --version
