--- a/app/composer.json
+++ b/app/composer.json
@@ -3,6 +3,8 @@
     "require": {
         "squizlabs/php_codesniffer": "3.6.0",
         "phpcompatibility/php-compatibility": "9.3.5",
-        "dealerdirect/phpcodesniffer-composer-installer": "0.7.1"
+        "dealerdirect/phpcodesniffer-composer-installer": "0.7.1",
+        "moxio/php-codesniffer-sniffs": "2.5.1",
+        "slevomat/coding-standard": "7.0.4"
     }
 }
